terraform/5-nat.tf
resource "aws_eip" "nat" {
    domain = "vpc"

    tags = {
      Name  = "${local.env}-nat"
    }
  
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_zone1

  tags = {
    Name = "${local.env}-nat"
  }

  depends_on = [ aws_internet_gateway.igw ]
}
